# Algorithm_Engineering

./: .gitignore  README.md
answers/: Vorlesung01.md
answers/Vorlesung_01/: Vorlesung01.md  pi_estimate_parallel.cpp
answers/Vorlesung_02/: Vorlesung02.md  pi_numerical_integration_parallel.cpp
answers/Vorlesung_03/: Vorlesung03.md  pi_estimate_parallel_modified.cpp
answers/Vorlesung_04/: CMakeLists.txt  Visualize.ipynb  Vorlesung04.md  benchmark_array_size_seed_123.csv  benchmark_array_size_seed_456.csv  benchmark_array_size_seed_789.csv  benchmark_num_threads_seed_123.csv  benchmark_num_threads_seed_456.csv  benchmark_num_threads_seed_789.csv  min_max_quicksort_benchmark.cpp
answers/Vorlesung_05/: CMakeLists.txt
answers/Vorlesung_05/part_01_quantpng/quantize/: CMakeLists.txt
answers/Vorlesung_05/part_02_fizzbuzz/: CMakeLists.txt  catch_main.cpp  catch_tests_fizzbuzz.cpp
answers/Vorlesung_05/part_02_fizzbuzz/catch/: CMakeLists.txt
answers/Vorlesung_05/part_02_fizzbuzz/fizzbuzz/: CMakeLists.txt
answers/Vorlesung_05/part_02_fizzbuzz/fizzbuzz/include/: fizzbuzz.h
answers/Vorlesung_05/part_02_fizzbuzz/fizzbuzz/src/: fizzbuzz.cpp
answers/Vorlesung_06/: Vorlesung06.md
answers/Vorlesung_07/: Vorlesung07.md
answers/Vorlesung_08/: Vorlesung08.md
answers/Vorlesung_09/: Vorlesung09.md
answers/Vorlesung_10/: Vorlesung10.md
answers/Vorlesung_11/: Vorlesung11.md
answers/Vorlesung_12/: Vorlesung12.md
project/: CMakeLists.txt  README.md  pi_estimate_parallel.cpp
project/catch/: CMakeLists.txt
project/include/: image_processing.h
(+9 files in other folders)
